...
        
        self.view.addSubview(actionButton)
        
    }

    private func initialiseNavbarTitle() {
        self.navigationItem.title = "Announcement Detail"
    }
    
    private func initialiseDatabaseChild() {
        announcementRef = ref.child("announcements").child(announcementKey)
        eventRef = ref.child("event").child(announcementKey)
    }
...
